poprawki w kategoriach pl

--- a/content/polski/posts/2023-04-14-onet-talk.md
+++ b/content/polski/posts/2023-04-14-onet-talk.md
@@ -6,7 +6,7 @@ date: 2023-04-13T12:00:00+00:00
 url: /onet-talk/
 thumbnail: /images/2023/04/onet.jpg
 categories:
-- Work
+- Praca
 ---
 
 Opowiadam o tym, jak [Ringier Axel Springer Polska](https://www.linkedin.com/company/ringier-axel-springer-polska/?lipi=urn%3Ali%3Apage%3Ad_flagship3_detail_base%3BOOgTtALdS4edIpVFur07gg%3D%3D) i [Onet](https://www.linkedin.com/company/onet-pl/?lipi=urn%3Ali%3Apage%3Ad_flagship3_detail_base%3BOOgTtALdS4edIpVFur07gg%3D%3D) wprowadzają innowację z wykorzystaniem #AI #MachineLearning - np. w kategorii równouprawnienia treści.
