--- a/content/english/posts/2023-03-25-aws.md
+++ b/content/english/posts/2023-03-25-aws.md
@@ -6,6 +6,8 @@ date: 2023-03-24T13:00:00+00:00
 url: /aws-certified-solutions-architect/
 categories:
 - Work
+tags:
+- aws
 ---
 
 After a decade of working with AWS, I am thrilled to share that I have earned my first professional certificate as a Solution Architect. I am both surprised and humbled by this achievement.
