--- a/content/english/posts/2014-06-19-atm-fail.md
+++ b/content/english/posts/2014-06-19-atm-fail.md
@@ -4,7 +4,7 @@ author: admin
 type: post
 date: 2014-06-19T06:12:23+00:00
 url: /atm-fail/
-thumbnail: /images/2015/06/cba-atm-fail.jpg
+thumbnail: /images/2015/06/cba-atm-fail.webp
 categories:
   - Random
 format: image
@@ -12,4 +12,4 @@ format: image
 ---
 It happens 😉
 
-![](/images/2015/06/cba-atm-fail.jpg)
+![CBA ATM FAIL~~~~](/images/2015/06/cba-atm-fail.jpg)
