--- a/content/polski/posts/2024-02-16-ai-1.md
+++ b/content/polski/posts/2024-02-16-ai-1.md
@@ -9,7 +9,8 @@ categories:
  - Blog
 tags:
  - ai
-
+series:
+ - AI
 ---
 
 Czy zastanawiałeś się kiedyś, jak sztuczna inteligencja (AI) może zmienić oblicze Twojego biznesu?
