--- a/content/polski/posts/2024-02-20-ai-2.md
+++ b/content/polski/posts/2024-02-20-ai-2.md
@@ -9,7 +9,8 @@ categories:
  - Blog
 tags:
  - ai
-
+series:
+  - AI
 ---
 
 Czy jesteś gotowy przekształcić swoje podejście do biznesu i zacząć korzystać z pełnego potencjału NLP? Przeczytaj nasz artykuł, by odkryć praktyczne sposoby na wykorzystanie tej technologii i dowiedz się, jak może ona wspierać Twój biznes w osiąganiu lepszych wyników. Zapraszam do lektury i do podzielenia się swoimi przemyśleniami!
