cleaned up articles

--- a/content/english/posts/2024-04-16-security.md
+++ b/content/english/posts/2024-04-16-security.md
@@ -7,11 +7,11 @@ url: /2024/security
 description: Discover essential security tips for client visits, from always logging out to using MFA, based on real experiences and amusing anecdotes.
 thumbnail: /images/2024/03/gpt-vs-gemini.jpeg
 categories:
- - Blog
+ - Work
+    
 ---
 Working with multiple clients across various settings has taught me the importance of robust security practices—and provided a few humorous yet educational moments when these rules were overlooked! 
 
-<!--more-->
 Here’s how you can keep your reputation and data safe and avoid common pitfalls when working offsite:
 
 1. 🔒 **Always Log Out**: Ensure to log out from all devices when stepping away, even for brief moments. This simple action can protect sensitive information from unauthorized access or awful jokes from security guys 😂 
