new content + series

--- a/content/english/posts/2024-04-16-security.md
+++ b/content/english/posts/2024-04-16-security.md
@@ -5,9 +5,10 @@ type: post
 date: 2024-04-16
 url: /2024/security
 description: Discover essential security tips for client visits, from always logging out to using MFA, based on real experiences and amusing anecdotes.
-thumbnail: /images/2024/03/gpt-vs-gemini.jpeg
+thumbnail: /images/2024/04/security.webp
 categories:
  - Work
+ - Blog
     
 ---
 Working with multiple clients across various settings has taught me the importance of robust security practices—and provided a few humorous yet educational moments when these rules were overlooked! 
