--- a/content/english/posts/2024-04-23-torch.md
+++ b/content/english/posts/2024-04-23-torch.md
@@ -4,10 +4,8 @@ author: slav
 type: post
 date: 2024-04-23
 url: /2024/unlocking-tribal-knowledge
-description: Unlock the power of knowledge sharing in your business! Discover why sharing expertise is crucial and how to overcome common obstacles like
-knowledge silos, unclear explanations, and resistance to training. Learn simple strategies to transform individual knowledge into a collective
-asset
-thumbnail: /images/2024/04/knowledge-sharing
+description: Unlock the power of knowledge sharing in your business! Discover why sharing expertise is crucial and how to overcome common obstacles like knowledge silos, unclear explanations, and resistance to training. Learn simple strategies to transform individual knowledge into a collective asset
+thumbnail: /images/2024/04/knowledge-sharing.webp
 categories:
  - Blog
  - Work
