--- a/content/polski/posts/2024-02-22-ai-3.md
+++ b/content/polski/posts/2024-02-22-ai-3.md
@@ -3,7 +3,7 @@ title: Jak uczenie maszynowe (ML) przekształca decyzje biznesowe
 author: slav
 type: post
 date: 2024-02-26
-url: /2024/potencjal-nlp-llm
+url: /2024/decyzje-biznesowe-ml
 thumbnail: /images/2024/02/ai-3.webp
 description: Wykorzystaj moc ML do przekształcania danych w strategiczne perspektywy biznesowe! Dowiedz się, jak ML pomaga przewidywać trendy, wykrywać anomalie i podejmować lepsze decyzje. Zwiększ przewagę konkurencyjną za pomocą analizy danych z ML.
 categories:
