--- a/content/polski/posts/2024-03-28-urodziny.md
+++ b/content/polski/posts/2024-03-28-urodziny.md
@@ -4,7 +4,7 @@ author: slav
 type: post
 date: 2024-03-28
 url: /2024/urodziny
-description: świętuję ponad 20 niesamowitych lat w ciągle zmieniającym się świecie technologii. To była absolutna kolejka górska, i nie chciałbym tego zmieniać!
+description: Świętuję ponad 20 niesamowitych lat w ciągle zmieniającym się świecie technologii! Była to absolutna kolejka górska!
 categories:
  - Blog
 ---
