--- a/content/polski/posts/2023-03-25-aws.md
+++ b/content/polski/posts/2023-03-25-aws.md
@@ -8,7 +8,7 @@ categories:
 - Praca
 ---
 
-Po ponad 10 latach pracy z AWS, zrobiłem pierwszy certyfikat jako Architekt Rozwiązań. 
+Po ponad 10 latach pracy z AWS zrobiłem pierwszy certyfikat jako Architekt Rozwiązań. 
 
 ![AWS Certified Solutions Architect - Associate](/images/2023/03/saa.png "AWS Certified Solutions Architect - Associate")
 23T0L60C6NE41F3G
