--- a/content/english/posts/2024-03-28-birthday.md
+++ b/content/english/posts/2024-03-28-birthday.md
@@ -1,5 +1,5 @@
 ---
-title: 20+ incredible years of diving, head-first, into the ever-changing world of tech
+title: Techs Ever-Changing Landscape - My Journey
 author: slav
 type: post
 date: 2024-03-28
