--- a/content/english/posts/2024-04-23-torch.md
+++ b/content/english/posts/2024-04-23-torch.md
@@ -1,5 +1,5 @@
 ---
-title: Unlocking Tribal Knowledge in the Business Campfire
+title: Tribal Knowledge Sharing for Business Success
 author: slav
 type: post
 date: 2024-04-23
