--- a/content/polski/posts/2024-02-16-ai-1.md
+++ b/content/polski/posts/2024-02-16-ai-1.md
@@ -1,5 +1,5 @@
 ---
-title: Zaproszenie do świata AI - Jak sztuczna inteligencja rewolucjonizuje biznes?
+title: Zaproszenie do świata AI. Rewolucja w biznesie?
 author: slav
 type: post
 date: 2024-02-16
