--- a/content/polski/posts/2024-02-22-ai-3.md
+++ b/content/polski/posts/2024-02-22-ai-3.md
@@ -1,5 +1,5 @@
 ---
-title: Jak uczenie maszynowe (ML) przekształca decyzje biznesowe
+title: Jak ML zmienia decyzje biznesowe
 author: slav
 type: post
 date: 2024-02-26
