--- a/content/polski/posts/2024-03-28-urodziny.md
+++ b/content/polski/posts/2024-03-28-urodziny.md
@@ -11,7 +11,7 @@ categories:
 
 🎈🎉 Wielki dzień dzisiaj! 🎉🎈 Nie tylko jestem o rok mądrzejszy, ale też świętuję ponad 20 niesamowitych lat w ciągle zmieniającym się świecie technologii. To była absolutna kolejka górska, i nie chciałbym tego zmieniać!
 
-Moja podróż rozpoczęła się, gdy serwer zwany dzisiaj "metalem" były jedynym jaki mozna bylo mieć. To było praktyczne, wymagające i satysfakcjonujące. 🛠️💻
+Moja podróż rozpoczęła się, gdy serwer zwany dzisiaj "metalem" były jedynym jaki mozna było mieć. To było praktyczne, wymagające i satysfakcjonujące. 🛠️💻
 
 Idźmy trochę do przodu, a scena technologiczna się zmieniła. Wkracza era obliczeń w chmurze. Nagle nie tylko majstrowałem przy fizycznych serwerach; nawigowałem po rozległych niebiosach chmury. To było jak wejście do filmu sci-fi ☁️✨
 
